--- a/style.css
+++ b/style.css
@@ -47,14 +47,42 @@
 
     /* Main */
     .whatis-title-container{
-        background-color: black;
+        background-color: #6D15E1;
         width: 21rem;
         border-radius: 16px;
-        margin-top: 20px;
+        margin-top: 32px;
+        text-align: center;
+        margin-left: 3rem;
     }
     .whatis-title{
         color: #fff;
-        font-size: 27px;
+        font-size: 23px;
         margin-left: 9px;
     }
+
+    .text-1-container{
+        font-size: 19px;
+        margin-top: 20px;
+        display: grid;
+        justify-content: center;
+    }
+
+    .text-1{
+        text-align: justify;
+        width: 24rem;
+    }
+
+    .img1-container{
+        display: grid;
+        justify-content: center;        
+    }
+
+    .img1{
+        width: 200px;
+        height: 200px;
+        margin-top: 20px;
+        border: 4px solid #6D15E1;
+    }
+
+    
 }
