--- a/style.css
+++ b/style.css
@@ -176,11 +176,13 @@
         margin-left: 9rem;
         margin-bottom: 1rem;
         margin-top: 1rem;
+        height: 4rem;
     }
 
     .next-page{
         width: 60px;
         margin-left: 30px;
+        margin-top: 2px;
     }
 
     footer{
@@ -238,5 +240,9 @@
         color: #fff;
         text-align: justify;    
     }
-    
+
+    .img-nextpage{
+        display: grid;
+        justify-content: center;
     }
+}
