--- a/style.css
+++ b/style.css
@@ -1,157 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Quicksand:wght@300..700&display=swap');
 *{
     margin: 0;
     padding: 0;
-    font-family: "Rubik", sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
-    font-style: normal;
+  
 }
 
-@media screen and (max-width: 700px){
-    html, body{
-        overflow-x: hidden;
-    }
+html body{
+    overflow-x: hidden;    
+}
 
-    .navbar{
-        background-color: #6D15E1;
-        height: 4rem;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
+.secret-box-container{
+    display: grid;
+    justify-content: center;
+}
 
-    .navbar-img{
-        width: 120px;
-        height: 120px;
-        
-    }
-    
-    .navbar-img-container{
-        position: relative;
-        right: 50px;
-        align-items: left;
-        margin-top: 3px;
-    }
+.button-secret-container{
+    display: grid;
+    justify-content: center;
+}
 
-    .navbar-list{
-        list-style: none;
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
-        gap: 15px;
-    }
-    
-    .link-item{
-        color: #fff;
-        text-decoration: none;
-    }
+.button-secret{
+    width: 500px;
+    font-size: 50px;
+    margin: 10px;
+    transition: 1s;
+    border-radius: 0%;
+    background-image: linear-gradient(to left, green, #6AFA2C, #14F777 );
+    animation: mygradient 5s ease infinite;
+    background-size: 400% 400%;
+}
 
-    /* Main */
-    .whatis-title-container{
-        background-color: #6D15E1;
-        width: 21rem;
-        border-radius: 16px;
-        margin-top: 32px;
-        text-align: center;
-        margin-left: 3rem;
-    }
-    .whatis-title{
-        color: #fff;
-        font-size: 23px;
-        margin-left: 9px;
-    }
+.button-secret:hover{
+    border-radius: 16px;
+    transition: 1s;
+    cursor: pointer;
+}
 
-    .text-1-container{
-        font-size: 17px;
-        margin-top: 20px;
-        display: grid;
-        justify-content: center;
+@keyframes mygradient {
+    0%{
+        background-position: 0% 50%;
     }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0% 50%;
+    }
+}
 
-    .text-1{
-        text-align: justify;
-        width: 24rem;
-    }
+.images-1-container{
+    display: none;
+    gap: 20px;
+    -webkit-animation: animate-div-1 3s;
+    justify-content: center;
+}
 
-    .img1-container{
-        display: grid;
-        justify-content: center;        
-    }
+.images-2-container{
+    display: none;
+    gap: 20px;
+    margin-top: 10px;
+    -webkit-animation: animate-div-2 3s;
+    justify-content: center;
+}
 
-    .img1{
-        width: 200px;
-        height: 200px;
-        margin-top: 20px;
-        margin-bottom: 1rem;
-        border: 4px solid #6D15E1;
-    }
+.images{
+    width: 250px;
+    height: 250px;
+}
 
-    .list-ia-type-container{ 
-        .list-ia-type-container{
-        margin-left: 2rem; 
-        font-size: 17px;
-    }
+@-webkit-keyframes animate-div-1 {
+    from { opacity: 0; margin-top: -100px;}
+    to { opacity: 1; margin-top: 0px;}
+}
 
-    .list-1{
-        margin-left: 40px;
-        text-decoration: underline;
-    }
+@-webkit-keyframes animate-div-2 {
+    from { opacity: 0; margin-top: -100px;}
+    to { opacity: 1; margin-top: 10px;}
+}
 
-    footer{
-        background-color: #6D15E1;
-    }
-
-    .img-footer-container{
-        display: grid;
-        justify-content: center;
-    }
-
-    .img-footer{
-        width: 120px;
-        height: 120px;
-        position: relative;
-        top: 3px;
-    }
-
-    .black-line-footer{
-        margin-bottom: 15px;
-        margin-left: 120px;
-        margin-right: 120px;
-    }
-
-    .footer-list{
-        display: grid;
-        list-style: none;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .footer-list-item{
-        margin-bottom: 30px;
-        font-size: 25px;
-    }
-    
-    .footer-list-link{
-        color: #fff;
-        text-decoration: none;
-    }
-
-    .footer-list-link:hover{
-        color: #000;
-        transition: 0.1s ease-out;
-        font-weight: 700;
-    }
-
-    .p-footer-aboutus-container{
-        display: grid;
-        justify-content: center;
-    }
-    
-    .p-footer-aboutus{
-        width: 23rem;
-        color: #fff;
-        text-align: justify;    
-    }
-    }
-    }
+.subtitle-container{
+    display: none;
+    justify-content: center;
+    margin-top: 10px;
+    -webkit-keyframes: animate-div-2;
+    font-size: 50px;
+}
